--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
     </div>
     <!-- End Pricing -->
     <!-- Start Videos -->
-    <div class="videos" id="videos">
+<!--     <div class="videos" id="videos">
       <h2 class="main-title">Top Videos</h2>
       <div class="container">
         <div class="holder">
@@ -808,7 +808,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- End Videos -->
     <!-- Start Stats -->
     <div class="stats" id="stats">
